5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1675_2474.log
== SUBMITION (2019-05-01 18:31:46) 
-- CODE:
dia=int(input())
mes=int(input())
ano=int(input())
if(dia>=1 and dia<=31) and (mes>=1 and mes<=12):
	q=dia
	ano=ano
	if(mes==1):
		mes=13
		ano=ano-1
	elif(mes==2):
		mes=14
		ano=ano-1
	else:
		mes=mes
		ano=ano
	k=ano%100
	j=ano//100
	h=(q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	if(h==0):
		print("sabado")
	elif(h==1):
		print("domingo")
	elif(h==2):
		print("segunda-feira")
	elif(h==3):
		print("terca-feira")
	elif(h==4):
		print("quarta-feira")
	elif(h==5):
		print("quinta-feira")
	elif(h==6):
		print("sexta-feria")
	

-- EXECUTION TIME:
0.152615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1675/2474/main.py", line 18, in <module>
    h=(q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:31:51) 
-- CODE:
dia=int(input())
mes=int(input())
ano=int(input())
if(dia>=1 and dia<=31) and (mes>=1 and mes<=12):
	q=dia
	ano=ano
	if(mes==1):
		mes=13
		ano=ano-1
	elif(mes==2):
		mes=14
		ano=ano-1
	else:
		mes=mes
		ano=ano
	k=ano%100
	j=ano//100
	h=(q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	if(h==0):
		print("sabado")
	elif(h==1):
		print("domingo")
	elif(h==2):
		print("segunda-feira")
	elif(h==3):
		print("terca-feira")
	elif(h==4):
		print("quarta-feira")
	elif(h==5):
		print("quinta-feira")
	elif(h==6):
		print("sexta-feria")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    h=(q+int((13*(m+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:32:34) 
-- CODE:
dia=int(input())
mes=int(input())
ano=int(input())
if(dia>=1 and dia<=31) and (mes>=1 and mes<=12):
	q=dia
	ano=ano
	if(mes==1):
		mes=13
		ano=ano-1
	elif(mes==2):
		mes=14
		ano=ano-1
	else:
		mes=mes
		ano=ano
	k=ano%100
	j=ano//100
	h=(q+int((13*(mes+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	if(h==0):
		print("sabado")
	elif(h==1):
		print("domingo")
	elif(h==2):
		print("segunda-feira")
	elif(h==3):
		print("terca-feira")
	elif(h==4):
		print("quarta-feira")
	elif(h==5):
		print("quinta-feira")
	elif(h==6):
		print("sexta-feria")
	

-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:32:50) 
-- CODE:
dia=int(input())
mes=int(input())
ano=int(input())
if(dia>=1 and dia<=31) and (mes>=1 and mes<=12):
	q=dia
	ano=ano
	if(mes==1):
		mes=13
		ano=ano-1
	elif(mes==2):
		mes=14
		ano=ano-1
	else:
		mes=mes
		ano=ano
	k=ano%100
	j=ano//100
	h=(q+int((13*(mes+1))/5)+k+int(k/4)+int(j/4)+5*j)%7
	if(h==0):
		print("sabado")
	elif(h==1):
		print("domingo")
	elif(h==2):
		print("segunda-feira")
	elif(h==3):
		print("terca-feira")
	elif(h==4):
		print("quarta-feira")
	elif(h==5):
		print("quinta-feira")
	elif(h==6):
		print("sexta-feria")
	

-- EXECUTION TIME:
0.238555
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
